[package]
name = "my-redis"
version = "0.1.0"
authors = ["Cunyue <cunykang@gmail.com>"]
edition = "2021"
description = """
An incomplete implementation of a Rust Redis server. Just for fun.
"""

[[bin]]
name = "redis-server"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "2.0.2"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
nanoid = "0.4.0"  # generate unique string when testing
